--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
+@import './common/colors.css';
+
 body {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: #fff;
+  background-color: var(--hiregl-white);
   color: #000;
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
